# enterprise-ai-os

./: .editorconfig  .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
backend/: .coverage  .coveragerc  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  coverage.xml  docker-compose.yml  pyproject.toml  pytest.ini  test_adk.py
backend/.github/workflows/: ci.yml
backend/alembic/: env.py
backend/alembic/versions/: 9c31c6a15984_initial_migration.py
backend/app/: main.py
backend/app/agents/: __init__.py  base.py  customer_support.py  dependencies.py  exceptions.py  registry.py  schemas.py  service.py
backend/app/api/v1/: agent.py  health.py  root.py  router.py  version.py
backend/app/cache/: dependencies.py  redis.py
backend/app/config/: settings.py
backend/app/core/: factory.py
backend/app/db/: engine.py  session.py
backend/app/exceptions/: handlers.py
backend/app/llm/: __init__.py  base.py  exceptions.py  gemini.py  service.py
backend/app/logging/: logger.py
backend/app/middleware/: logging_middleware.py  process_time.py  request_id.py
backend/app/repositories/: base.py
backend/tests/: conftest.py
backend/tests/agents/: test_agent_core.py  test_api.py
backend/tests/api/: test_endpoints.py
backend/tests/cache/: test_redis.py
backend/tests/db/: test_db.py
