[project]
name = "eaios-backend"
version = "0.1.0"
description = "Enterprise AI Operating System (EAIOS) Backend Foundation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.4",
    "orjson>=3.10.6",
    "structlog>=24.2.0",
    "sqlalchemy[asyncio]>=2.0.31",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2",
    "redis>=5.0.7",
    "google-adk>=2.4.0",
    "google-genai>=2.10.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.2",
    "pytest-cov",
    "httpx>=0.27.0",
    "ruff>=0.4.10",
    "black>=24.4.2",
    "mypy>=1.10.0",
    "pre-commit>=3.7.1",
    "pytest-asyncio>=0.23.7"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"
